Cloth Pinning Does Not Obey Weight Map #32677

Closed
opened 2012-09-27 16:56:58 +02:00 by Zach Wilson · 7 comments

%%%The latest version of Blender 2.63.22 r50890 does not respect weight map values in the Pinning feature for Cloth.

Maps with 100% values in build 2.63.0 r46461:46487M do not get affected by the cloth simulation.

In the attached file you will see the geometry falling using the RC2 build, where as in previous builds the animation is respected due to the weight values in the "SoftBody" vertex group used under "pinning".

If the Stiffness: value is pushed to 50, the object does not fall anymore, but the 100% vertices are still affected.%%%

%%%The latest version of Blender 2.63.22 r50890 does not respect weight map values in the Pinning feature for Cloth. Maps with 100% values in build 2.63.0 r46461:46487M do not get affected by the cloth simulation. In the attached file you will see the geometry falling using the RC2 build, where as in previous builds the animation is respected due to the weight values in the "SoftBody" vertex group used under "pinning". If the Stiffness: value is pushed to 50, the object does not fall anymore, but the 100% vertices are still affected.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Daniel, can you please check on this? Thanks!%%%

%%%Daniel, can you please check on this? Thanks!%%%
Author

%%%this seems to be working fine in the 2.64 release. Thanks guys.%%%

%%%this seems to be working fine in the 2.64 release. Thanks guys.%%%
Author

%%%woops, no, its not.%%%

%%%woops, no, its not.%%%
Member

%%%Confirmed and fixed in svn r51226.

Thanks for reporting this issue!%%%

%%%Confirmed and fixed in svn r51226. Thanks for reporting this issue!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Works great! Thanks Daniel.%%%

%%%Works great! Thanks Daniel.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32677
No description provided.