Bugfix [#32677] Cloth Pinning Does Not Obey Weight Map

Problem occured when having more than one weight map available.